// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Line > Should render <Line/> when columns: [ Array(1) ], className: undefined, modifier: 'modifier', children: undefined, lineNumber: 4 1`] = `
<tbody>
  <tr
    class="af-table__tr af-table__tr--modifier"
  >
    <td
      class="af-table__cell"
    >
      F
    </td>
  </tr>
</tbody>
`;

exports[`Line > Should render <Line/> when columns: [ Array(1) ], className: undefined, modifier: undefined, children: undefined, lineNumber: 3 1`] = `
<tbody>
  <tr
    class="af-table__tr"
  >
    <td
      class="af-table__cell"
    >
      F
    </td>
  </tr>
</tbody>
`;

exports[`Line > Should render <Line/> when columns: [], className: undefined, modifier: undefined, children: undefined, lineNumber: 2 1`] = `
<tbody>
  <tr
    class="af-table__tr"
  />
</tbody>
`;

exports[`Line > Should render <Line/> when columns: undefined, className: undefined, modifier: undefined, children: undefined, lineNumber: 1 1`] = `
<tbody>
  <tr
    class="af-table__tr"
  />
</tbody>
`;
